# Copyright 2016 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

config("lwip_config") {
  include_dirs = [
    "ports/fuchsia/include",
    "src/include",
  ]
}

static_library("lwip") {
  sources = [
    "ports/fuchsia/include/netif/ethernetif.h",
    "ports/fuchsia/netif/ethernetif.c",
    "ports/fuchsia/sys_arch.c",
    "src/apps/lwiperf/lwiperf.c",
    "src/api/api_lib.c",
    "src/api/api_msg.c",
    "src/api/err.c",
    "src/api/netbuf.c",
    "src/api/netdb.c",
    "src/api/netifapi.c",
    "src/api/sockets.c",
    "src/api/tcpip.c",
    "src/core/def.c",
    "src/core/dns.c",
    "src/core/inet_chksum.c",
    "src/core/init.c",
    "src/core/ip.c",
    "src/core/ipv4/autoip.c",
    "src/core/ipv4/dhcp.c",
    "src/core/ipv4/etharp.c",
    "src/core/ipv4/icmp.c",
    "src/core/ipv4/igmp.c",
    "src/core/ipv4/ip4.c",
    "src/core/ipv4/ip4_addr.c",
    "src/core/ipv4/ip4_frag.c",
    "src/core/ipv6/dhcp6.c",
    "src/core/ipv6/ethip6.c",
    "src/core/ipv6/icmp6.c",
    "src/core/ipv6/ip6.c",
    "src/core/ipv6/ip6_addr.c",
    "src/core/ipv6/ip6_frag.c",
    "src/core/ipv6/mld6.c",
    "src/core/ipv6/nd6.c",
    "src/core/mem.c",
    "src/core/memp.c",
    "src/core/netif.c",
    "src/core/pbuf.c",
    "src/core/raw.c",
    "src/core/stats.c",
    "src/core/sys.c",
    "src/core/tcp.c",
    "src/core/tcp_in.c",
    "src/core/tcp_out.c",
    "src/core/timeouts.c",
    "src/core/udp.c",
    "src/netif/ethernet.c",
    "src/netif/slipif.c",
  ]

  public_configs = [ ":lwip_config" ]

  if (is_debug) {
    sources += [
      "ports/fuchsia/debug_flags.c",
    ]
    cflags = [
      "-DLWIP_DEBUG",
      "-Wno-address-of-packed-member",
    ]
  }
}
